# shrillecho

./: .gitignore  pyproject.toml  requirements.txt
shrillecho/: __init__.py
shrillecho/artist/: spotify_artist.py
shrillecho/auth/: __init__.py  local_auth.py  oauth.py  spotify_auth.py
shrillecho/player/: spotify_player.py
shrillecho/playlist/: __init__.py  playlist_engine.py  spotify_playlist.py
shrillecho/playlist/archive/: playlist_engine.py
shrillecho/scraping/: browser_auth.py
shrillecho/spotify/: client.py  task_scheduler.py
shrillecho/track/: spotify_track.py
shrillecho/types/: album_types.py  albums.py  artist_types.py  artists.py  base_types.py  component_types.py  components.py  playlist_types.py  playlists.py  soundcloud_types.py  track_types.py  tracks.py  user_types.py  users.py
shrillecho/types/archive_delete/: all.py
shrillecho/user/: __init__.py  user.py
shrillecho/utility/: __init__.py  async_spotify.py  cache.py  discovery.py  general.py  general_utility.py  misc_functions_sort.py  mongo.py  playlist.py  scraper.py  soundcloud_converter.py
shrillecho/utility/archive_maybe_delete/: async_spotify.py  batch_dump.py  cache.py  discovery.py  general.py  old_cache.py  parsers.py  playlist.py  scraper.py  spotify_client.py
