[tool.poetry]
name = "shrillecho"
version = "1.0.0"
description = "Music Tool"
authors = ["simon balfe <sbmain17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
spotipy = ">=2.23.0,<2.24.0"
python-dotenv = ">=1.0.0,<1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
