[tool.poetry]
name = "shrillecho"
version = "1.0.9"
description = "Music Tool"
authors = ["simon balfe <sbmain17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
spotipy = ">=2.23.0,<2.24.0"
python-dotenv = ">=1.0.0,<1.1.0"
setuptools = ">=65.5.0,<65.6.0"
selenium = ">=4.14.0,<4.15.0"
esper = ">=3.0,<4.0"
pymongo = ">=4.5.0,<4.6.0"
requests = ">=2.31.0,<2.32.0"
psycopg2 = ">=2.9.9,<2.10.0"
httpx = ">=0.25.1,<0.26.0"
fuzzywuzzy = ">=0.18.0,<0.19.0"
opencv-python = ">=4.8.1.78,<4.9.0.0"
numpy = ">=1.26.4,<1.27.0"
scikit-learn = ">=1.4.0,<1.5.0"
scikit-image = ">=0.22.0,<0.23.0"
graphene = ">=3.3,<4.0"
fastapi = ">=0.104.0,<0.105.0"
redis = ">=5.0.1,<5.1.0"
uv = ">=0.1.10,<0.2.0"
dnspython = ">=2.4.2,<2.5.0"
trio = ">=0.22.2,<0.23.0"
idna = ">=3.4,<4.0"
httpcore = ">=1.0.1,<1.1.0"
anyio = ">=3.7.1,<3.8.0"
h11 = ">=0.14.0,<0.15.0"
pip = ">=23.2.1,<23.3.0"
attrs = ">=23.1.0,<23.2.0"
pillow = ">=10.2.0,<10.3.0"
jinja2 = ">=3.1.2,<3.2.0"
cleo = ">=2.1.0,<2.2.0"
crashtest = ">=0.4.1,<0.5.0"
fastclasses-json = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
